removed color from variant
